--- a/hero.html
+++ b/hero.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href='style.css' media="screen" title="no title" charset="utf-8" />
 	<title>
 		hero!
 	</title>
 </head>
 <body>
-	hero everynyan!
+	<section id="hero">
+		<section class="feature opened">
+			<header class="feature-title">
+				Stories!
+			</header>
+			<section class="feature-content">
+				<article class="feature">
+					<header class="feature-title">
+						Now this is the story...
+					</header>
+						<section class="article-content">
+							<p>
+								Now this is a story all about how my life got twisted upside down and I'd like to take a minute just sit right there I'll tell you how I became the prince of a town called Bel-Air</p>
+
+								<p>In west Philadelphia born and raised on the playground my momma said most of my days chilling out, maxing and relaxing all cool and all shooting some b-ball outside of school when a couple of guys they were up to no good started making trouble in our neighborhood I got in one little fight and my mom got scared she said your moving in with your auntie and uncle in Bel-Air</p>
+
+								<p>I whistled for a cab and when it came near the license plate said "fresh" and had dice in the mirror. If anything I could say that this cab was rare but I thought nah, forget it yo home to Bel-Air!</p>
+
+								<p>I pulled up to a house about seven or eight; I yelled to the cabbie, "yo home, smell you later!" Looked at my kingdom I was finally there to sit on my throne as the prince of Bel-Air.</p>
+							</p>
+						</section>
+					<figure class="article-figure">
+						<img src="media/stories/fresh_prince.jpg">
+						<figcaption>
+							#swag.
+						</figcaption>
+					</figure>
+				</article>
+			</section>
+		</section>
+	</section>
 </body>
 </html>
