Closer to a complete HTML mock-up.

--- a/hero.html
+++ b/hero.html
@@ -10,7 +10,7 @@
 	<section id="hero">
 		<section class="feature opened">
 			<header class="feature-title">
-				Stories!
+				Storieeeeeees!
 			</header>
 			<section class="feature-content">
 				<article class="feature-article">
