Taking it in a different direction.

--- a/hero.html
+++ b/hero.html
@@ -8,10 +8,7 @@
 </head>
 <body>
 	<section id="hero">
-		<section class="feature opened">
-			<header class="feature-title">
-				Storieeeeeees!
-			</header>
+		<section class="feature opened" id="stories">
 			<section class="feature-content">
 				<article class="feature-article">
 					<header class="article-title">
@@ -20,7 +17,7 @@
 					<figure class="article-figure">
 						<img src="media/stories/fresh_prince.jpg">
 						<figcaption>
-							#swag.
+							#swag
 						</figcaption>
 					</figure>
 						<section class="article-content">
@@ -83,21 +80,22 @@
 				</article>
 			</section>
 		</section>
-		<section class="feature">
-			<header class="feature-title">
-				Blaaaargs!
-			</header>
-		</section>
-		<section class="feature">
-			<header class="feature-title">
-				Videaaaaas!
-			</header>
-		</section>
-		<section class="feature">
-			<header class="feature-title">
-				Photooooows!
-			</header>
-		</section>
+		<nav class="features">
+			<ul>
+				<li class="opened" id="stories">
+					Storieeeeees!
+				</li>
+				<li id="blogs">
+					Blaaaargs!
+				</li>
+				<li id="videos">
+					Videaaaaas!
+				</li>
+				<li id="photos">
+					Photooooows!
+				</li>
+			</ul>
+		</nav>
 	</section>
 </body>
 </html>
