Going to add some dummy content, and then start javascripting it up!

--- a/hero.html
+++ b/hero.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href='hero/stylesheets/style.css' media="screen" title="no title" charset="utf-8" />
 	<title>
-		hero!
+		you're my hero!
 	</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
 			<section class="feature-content">
 				<article class="feature-article">
 					<header class="article-title">
-						Now this is the story...
+						Now this is a story...
 					</header>
 					<figure class="article-figure">
 						<img src="media/stories/fresh_prince.jpg">
@@ -83,16 +83,16 @@
 		<nav class="features">
 			<ul>
 				<li class="opened" id="stories">
-					Storieeeeees!
+					<span class="feature">Storieeeeees!</span>
 				</li>
 				<li id="blogs">
-					Blaaaargs!
+					<span class="feature">Blaaaargs!</span>
 				</li>
 				<li id="videos">
-					Videaaaaas!
+					<span class="feature">Videaaaaas!</span>
 				</li>
 				<li id="photos">
-					Photooooows!
+					<span class="feature">Photooooows!</span>
 				</li>
 			</ul>
 		</nav>
