Now the different sections appear when you click the corresponding links!

--- a/hero.html
+++ b/hero.html
@@ -84,40 +84,46 @@
 		</section>
 		
 		<section class="feature" id="blogs">
-			<article class="feature-article">
-				<header class="article-title">
-					lolololol
-				</header>
-				<section class="article-content">
-					<p>Paris–Brussels was first run on 12 August 1893 as an amateur event over a distance of 397 km, Belgian Andre Henry took the inaugural victory from compatriot Charles Delbecque with France's Fernand Augenault coming in third. The race did not return to the racing calendar until 1906 when it was run as a two day event on the 3rd and 4 June. The first stage of this 1906 event was run from the Paris suburb of Villiers-sur-Marne to Reims over 152 km and was won by France's Maurice Bardonneau. Albert Dupont took the more challenging second stage on the following day from Reims to Brussels over 239 km to take the overall race victory from compatriots Jules Patou and Guillaume Coeckelberg. The following year the race reverted to being a one day race and quickly established itself as one of the Spring Classics with a date towards the end of April, between Paris–Roubaix and Gent–Wevelgem. The event lost its prestige during the 1960s when the race was beset by traffic problems between the two capitals and the Dutch promoted Amstel Gold Race took its place on the classics calendar. The race was not run between 1967 and 1972.</p>
-				</section>
-			</article>
+			<section class="feature-content">
+				<article class="feature-article">
+					<header class="article-title">
+						blogs
+					</header>
+					<section class="article-content">
+						<p>Paris–Brussels was first run on 12 August 1893 as an amateur event over a distance of 397 km, Belgian Andre Henry took the inaugural victory from compatriot Charles Delbecque with France's Fernand Augenault coming in third. The race did not return to the racing calendar until 1906 when it was run as a two day event on the 3rd and 4 June. The first stage of this 1906 event was run from the Paris suburb of Villiers-sur-Marne to Reims over 152 km and was won by France's Maurice Bardonneau. Albert Dupont took the more challenging second stage on the following day from Reims to Brussels over 239 km to take the overall race victory from compatriots Jules Patou and Guillaume Coeckelberg. The following year the race reverted to being a one day race and quickly established itself as one of the Spring Classics with a date towards the end of April, between Paris–Roubaix and Gent–Wevelgem. The event lost its prestige during the 1960s when the race was beset by traffic problems between the two capitals and the Dutch promoted Amstel Gold Race took its place on the classics calendar. The race was not run between 1967 and 1972.</p>
+					</section>
+				</article>
+			</section>
 		</section>
 		
 		<section class="feature" id="videos">
-			<article class="feature-article">
-				<header class="article-title">
-					lolololol
-				</header>
-				<section class="article-content">
-					<p>The film begins with two high school sweethearts, Lawrence (played by Luke Roberston) and Caroline (played by Laura Breckenridge). They are about to go off to college, but claim they will stay together nonetheless. The film then jumps forward 25 years, and Lawrence (played by Frank Wood) is living back in his hometown, Bayonne, New Jersey, and is a photographer who photographs pets, as well as criminals at the local police station. He receives a surprise phone call from Caroline (played by Paige Turco), who has recently come back home in order to care for her sick father and who is divorced and has a troubled teenage son Johnny (played by Ryan Donowho). Caroline and Lawrence go on a date and rekindle their relationship, but shortly afterwards she dies in a freak accident. Johnny's father Harris (played by Aldo Perez) does not want to take care of him, and he will be going into foster care. When Johnny has a seizure at his mother's funeral, Lawrence decides to adopt him. The bulk of the film is about Lawrence and Johnny, and how Lawrence tries to be a father to Johnny while Johnny rejects him. Johnny also has a relationship with a neighborhood girl, Mariana (played by Isidra Vega), and problems with the local drug dealer Carter (played by Jesse Kelly).</p>
-				</section>
-			</article>
+			<section class="feature-content">
+				<article class="feature-article">
+					<header class="article-title">
+						videos
+					</header>
+					<section class="article-content">
+						<p>The film begins with two high school sweethearts, Lawrence (played by Luke Roberston) and Caroline (played by Laura Breckenridge). They are about to go off to college, but claim they will stay together nonetheless. The film then jumps forward 25 years, and Lawrence (played by Frank Wood) is living back in his hometown, Bayonne, New Jersey, and is a photographer who photographs pets, as well as criminals at the local police station. He receives a surprise phone call from Caroline (played by Paige Turco), who has recently come back home in order to care for her sick father and who is divorced and has a troubled teenage son Johnny (played by Ryan Donowho). Caroline and Lawrence go on a date and rekindle their relationship, but shortly afterwards she dies in a freak accident. Johnny's father Harris (played by Aldo Perez) does not want to take care of him, and he will be going into foster care. When Johnny has a seizure at his mother's funeral, Lawrence decides to adopt him. The bulk of the film is about Lawrence and Johnny, and how Lawrence tries to be a father to Johnny while Johnny rejects him. Johnny also has a relationship with a neighborhood girl, Mariana (played by Isidra Vega), and problems with the local drug dealer Carter (played by Jesse Kelly).</p>
+					</section>
+				</article>
+			</section>
 		</section>	
 		
 		<section class="feature" id="photos">
-			<article class="feature-article">
-				<header class="article-title">
-					lolololol
-				</header>
-				<section class="article-content">
-					<p>This story begins with Garrett being approached by a beautiful young woman by the name of Jill Craight. She hires Garrett to help find out who has been breaking into her apartment and why. Immediately after, a Magister Peridont comes to Garrett to try to get him to investigate the disappearance of some religious relics; Garrett respectfully declines. After getting attacked by a gang called the Vampires, Garrett goes to his old friend Maya, leader of a gang herself, for advice. Maya informs Garrett that Jill was a former member of the Doom, Maya's gang, and that she is a chronic liar. Sensing Garrett needs help, Maya invites herself along for the rest of the adventure.</p>
-					<p>Garrett and Maya continue their investigation, but unfortunately, Garrett has no leads and isn't even quite sure what to investigate. Garrett's one clue is some mysterious coinage tying together Jill and the Vampires. Garrett asks Magister Peridont about the coins, then heads over to the Royal Assay office for help. After learning nothing new, Garrett heads home, where he is visited again by Magister Peridont, who informs him that Miss Craight was in fact his mistress, and now she is missing.
-			</p>
-					<p>The story gets more complicated when Garrett visits Chodo Contague, whose house gets attacked by magical forces. Chodo Contague involves his henchmen more earnestly in Garrett's case, and Garrett and Maya take their search for Jill to the Tenderloin, the red-light district of TunFaire. When they return home, they find the same magical forces that attacked Chodo's mansion trying to tear apart Garrett's home. After taking care of them, the Dead Man intervenes, letting Garrett know that there is another dead Loghyr involved in the magical attacks. Eventually, Garrett and the Dead Man manage to tie together the roles of the Church, the missing relics, the dead Loghyr, and Jill Craight.</p>
-					<p>After discovering that Jill is hiding out in a church complex, Garrett and Morley break in and kidnap Jill and another of her lovers, a high status member of the Orthodox church. Garrett assembles everyone of importance at his house, and he and the Dead Man uncover the motives of all the parties present. Eventually, the relics are recovered, the other dead Loghyr is disposed of, and Garrett lives to tackle another adventure.</p>
-				</section>
-			</article>
+			<section class="feature-content">
+				<article class="feature-article">
+					<header class="article-title">
+						photos
+					</header>
+					<section class="article-content">
+						<p>This story begins with Garrett being approached by a beautiful young woman by the name of Jill Craight. She hires Garrett to help find out who has been breaking into her apartment and why. Immediately after, a Magister Peridont comes to Garrett to try to get him to investigate the disappearance of some religious relics; Garrett respectfully declines. After getting attacked by a gang called the Vampires, Garrett goes to his old friend Maya, leader of a gang herself, for advice. Maya informs Garrett that Jill was a former member of the Doom, Maya's gang, and that she is a chronic liar. Sensing Garrett needs help, Maya invites herself along for the rest of the adventure.</p>
+						<p>Garrett and Maya continue their investigation, but unfortunately, Garrett has no leads and isn't even quite sure what to investigate. Garrett's one clue is some mysterious coinage tying together Jill and the Vampires. Garrett asks Magister Peridont about the coins, then heads over to the Royal Assay office for help. After learning nothing new, Garrett heads home, where he is visited again by Magister Peridont, who informs him that Miss Craight was in fact his mistress, and now she is missing.
+				</p>
+						<p>The story gets more complicated when Garrett visits Chodo Contague, whose house gets attacked by magical forces. Chodo Contague involves his henchmen more earnestly in Garrett's case, and Garrett and Maya take their search for Jill to the Tenderloin, the red-light district of TunFaire. When they return home, they find the same magical forces that attacked Chodo's mansion trying to tear apart Garrett's home. After taking care of them, the Dead Man intervenes, letting Garrett know that there is another dead Loghyr involved in the magical attacks. Eventually, Garrett and the Dead Man manage to tie together the roles of the Church, the missing relics, the dead Loghyr, and Jill Craight.</p>
+						<p>After discovering that Jill is hiding out in a church complex, Garrett and Morley break in and kidnap Jill and another of her lovers, a high status member of the Orthodox church. Garrett assembles everyone of importance at his house, and he and the Dead Man uncover the motives of all the parties present. Eventually, the relics are recovered, the other dead Loghyr is disposed of, and Garrett lives to tackle another adventure.</p>
+					</section>
+				</article>
+			</section>
 		</section>
 		
 		<nav class="features">
