Some JS cleanup. Time to add options!

--- a/hero.html
+++ b/hero.html
@@ -12,7 +12,7 @@
 	<section id="hero">
 		<section id="strip">
 			<!--****************STORIES************-->
-			<section class="feature opened" id="stories">
+			<section class="feature" id="stories">
 				<section class="feature-content">
 					<article class="feature-article">
 						<header class="article-title">
