Changed the nav class .features to id #features, and changed the JS accordingly.

--- a/hero.html
+++ b/hero.html
@@ -131,19 +131,20 @@
 				</section>
 			</section>
 		</section>
-		<nav class="features">
+		<!--***********MAIN NAV*********-->
+		<nav id="features">
 			<ul>
 				<li class="opened" id="stories">
-					<span class="feature">Storieeeeees!</span>
+					<span class="feature-nav">Storieeeeees!</span>
 				</li>
 				<li id="blogs">
-					<span class="feature">Blaaaargs!</span>
+					<span class="feature-nav">Blaaaargs!</span>
 				</li>
 				<li id="videos">
-					<span class="feature">Videaaaaas!</span>
+					<span class="feature-nav">Videaaaaas!</span>
 				</li>
 				<li id="photos">
-					<span class="feature">Photooooows!</span>
+					<span class="feature-nav">Photooooows!</span>
 				</li>
 			</ul>
 		</nav>	
