--- a/hero.html
+++ b/hero.html
@@ -14,73 +14,39 @@
 			<!--****************STORIES************-->
 			<section class="feature" id="stories">
 				<section class="feature-content">
-					<article class="feature-article">
-						<header class="article-title">
-							Now this is a story...
-						</header>
-						<figure class="article-figure">
-							<img src="media/stories/fresh_prince.jpg">
-							<figcaption>
-								#swag
-							</figcaption>
+					<section id="stories-thumbs">
+						<figure id="bulbasaur">
+							<img src="media/stories/bulbasaur.png">
 						</figure>
-							<section class="article-content">
-								<p>
-									Now this is a story all about how my life got twisted upside down and I'd like to take a minute just sit right there I'll tell you how I became the prince of a town called Bel-Air</p>
-
-									<p>In west Philadelphia born and raised on the playground my momma said most of my days chilling out, maxing and relaxing all cool and all shooting some b-ball outside of school when a couple of guys they were up to no good started making trouble in our neighborhood I got in one little fight and my mom got scared she said your moving in with your auntie and uncle in Bel-Air</p>
-
-									<p>I whistled for a cab and when it came near the license plate said "fresh" and had dice in the mirror. If anything I could say that this cab was rare but I thought nah, forget it yo home to Bel-Air!</p>
-
-									<p>I pulled up to a house about seven or eight; I yelled to the cabbie, "yo home, smell you later!" Looked at my kingdom I was finally there to sit on my throne as the prince of Bel-Air.</p>
-								</p>
-							</section>
-					</article>
-					<article class="feature-article">
-						<header class="article-title">
-							Blargh blargh blargh
-						</header>
-						<figure class="article-figure">
-							<img src="media/stories/nigel.jpg">
-							<figcaption>
-								#supaswag
-							</figcaption>
+						<figure id="ivysaur">
+							<img src="media/stories/ivysaur.png">
 						</figure>
-						<section class="article-content">
-							<p>Coffee drinkers who were relatively healthy when the study began were less likely than nondrinkers to die of heart disease, respiratory disease, stroke, diabetes, infections, injuries and accidents.</p>
-
-							<p>The study, published in May in The New England Journal of Medicine, examined data on 402,260 adults in the National Institutes of Health-AARP Diet and Health Study. They were ages 50 to 71 and free of heart disease, cancer and stroke when the study began in 1995. By 2008, 52,515 had died. Dr. Freedman and his co-authors examined why they died in relation to how much coffee they said they drank when the study began.</p>
-
-							<p>The risk of death gradually dropped as the number of cups the participants drank increased to four or five. At six cups or more each day, there was a slight rise in death risk, compared with that at four or five cups. But the chances of death remained lower than among people who drank no coffee.</p>
-						</section>
-					</article>
-					<article class="feature-article">
-						<header class="article-title">
-							Yum!
-						</header>
-						<figure class="article-figure">
-							<img src="media/stories/spidey.png">
-							<figcaption>
-								Coffee drinkers who were relatively healthy when the study began were less likely than nondrinkers to die of heart disease.
-							</figcaption>
+						<figure id="venusaur">
+							<img src="media/stories/venusaur.jpg">
 						</figure>
-						<section class="article-content">
-							<p>1. Heat the olive oil over medium heat in a large, heavy soup pot and add the onion. Cook, stirring, until it is tender, about 5 minutes. Add a generous pinch of salt, the garlic and the zucchini and stir for about a minute, until the garlic smells fragrant. Add the curry powder, stir together, and add the stock or water, the rice and salt to taste. Bring to a boil, reduce the heat, cover and simmer 30 minutes. Taste and adjust salt.</p>
-
-							<p>2. Purée the soup with an immersion blender or a food mill or in batches in a blender, taking care to remove the lid or take out the center insert and to cover with a towel to avoid hot splashes. Return to the pot, heat through, add pepper and cayenne to taste and stir in the lemon juice. Serve, garnishing each bowl with paper-thin slices of zucchini, chopped chives and croutons if desired.</p>
-						</section>
-					</article>
-					<article class="feature-article">
-						<header class="article-title">
-							This one doesn't have a picture but it has a really long title! Let's see if this introduces any wrinkles in the styling.
-						</header>
-						<section class="article-content">
-							<p>Against this backdrop, Microsoft began to invest more in developing its own tablet hardware, though the company still had not decided whether to sell such a device itself or license it to others by the end of 2010, the former Microsoft executive said.</p>
-
-							<p>Some who study the technology industry still believe Microsoft will get out of the business of selling its own tablet computer as soon as it can persuade other hardware companies to build compelling devices of their own. “I think once they jump-start it, they plan to make money the way they always have — from licensing software,” said Michael A. Cusumano, a management professor at M.I.T.</p>
-
-							<p>In a nod to Apple’s work with aluminum, Microsoft began to closely study materials that could be used to create a distinctive case for a tablet. Members of the Windows team gravitated toward magnesium, a lightweight metal that felt good to testers when held in their hands, according to the former Microsoft executive.</p>
-						</section>
+						<figure id="charmander">
+							<img src="media/stories/charmander.jpg">
+						</figure>
+						<figure id="charmeleon">
+							<img src="media/stories/charmeleon.png">
+						</figure>
+						<figure id="charizard">
+							<img src="media/stories/charizard.jpg">
+						</figure>
+						<figure id="squirtle">
+							<img src="media/stories/squirtle.jpg">
+						</figure>
+						<figure id="wartortle">
+							<img src="media/stories/wartortle.jpg">
+						</figure>
+						<figure id="blastoise">
+							<img src="media/stories/blastoise.jpg">
+						</figure>
+					</section>
+					<article class="story" id="bulbasaur">
+						<title>
+							Bulbasaur '04
+						</title>
 					</article>
 				</section>
 			</section>
