More formatting of the thumbnails and stories.

--- a/hero.html
+++ b/hero.html
@@ -15,7 +15,7 @@
 			<section class="feature" id="stories">
 				<section class="feature-content">
 					<section id="stories-thumbs">
-						<figure id="bulbasaur">
+						<figure id="bulbasaur" class="opened">
 							<img src="media/stories/bulbasaur.png">
 						</figure>
 						<figure id="ivysaur">
