Developing proper story syntax, and working on the story styling more.

--- a/hero.html
+++ b/hero.html
@@ -14,6 +14,7 @@
 			<!--****************STORIES************-->
 			<section class="feature" id="stories">
 				<section class="feature-content">
+					<!--***********NAVIGATION BETWEEN STORIES-->
 					<section id="stories-thumbs">
 						<figure id="bulbasaur" class="opened">
 							<img src="media/stories/bulbasaur.png">
@@ -43,10 +44,22 @@
 							<img src="media/stories/blastoise.jpg">
 						</figure>
 					</section>
-					<article class="story" id="bulbasaur">
-						<title>
-							Bulbasaur '04
-						</title>
+					<!--***********THE STORIES THEMSELVES-->
+					<article class="story opened" id="bulbasaur">
+						<section class="story-image">
+							<img src="media/stories/bulbasaur.png">
+						</section>
+						<section class="story-blurb">
+							<header class="story-blurb">
+								Bulbasaur '01
+							</header>
+							<div class="blurb">
+								 <p>Bulbasaur is a quadruped, reptilian creature that somewhat resembles a toad or a young dinosaur with a spotted blue-green hide. It has three white toes or claws growing out of its four legs, and its eyes are a bright red. The most notable feature of this Pokémon is the onion-like bulb on its back, which grows from a seed planted on its back by its mother at birth.</p>
+								<button class="story-read-more">
+									Read moar!
+								</button>
+							</div>
+						</section>
 					</article>
 				</section>
 			</section>
