--- a/hero.html
+++ b/hero.html
@@ -56,7 +56,7 @@
 							<div class="blurb">
 								 <p>Bulbasaur is a quadruped, reptilian creature that somewhat resembles a toad or a young dinosaur with a spotted blue-green hide. It has three white toes or claws growing out of its four legs, and its eyes are a bright red. The most notable feature of this Pokémon is the onion-like bulb on its back, which grows from a seed planted on its back by its mother at birth.</p>
 								<button class="story-read-more">
-									Read moar!
+									Read more
 								</button>
 							</div>
 						</section>
@@ -114,16 +114,16 @@
 		<nav id="features">
 			<ul>
 				<li class="opened" id="stories">
-					<span class="feature-nav">Storieeeeees!</span>
+					<span class="feature-nav">Stories</span>
 				</li>
 				<li id="blogs">
-					<span class="feature-nav">Blaaaargs!</span>
+					<span class="feature-nav">Blogs</span>
 				</li>
 				<li id="videos">
-					<span class="feature-nav">Videaaaaas!</span>
+					<span class="feature-nav">Videos</span>
 				</li>
 				<li id="photos">
-					<span class="feature-nav">Photooooows!</span>
+					<span class="feature-nav">Photos</span>
 				</li>
 			</ul>
 		</nav>	
