Started working on JS to navigate entre cuentos desde los thumbnails del lado.

--- a/hero.html
+++ b/hero.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href='hero/stylesheets/style.css' media="screen" title="no title" charset="utf-8" />
 	<script src='hero/js/jquery.1.7.2.min.js' type="text/javascript" charset="utf-8"></script>
 	<script src='hero/js/hero_panels.js' type="text/javascript" charset="utf-8"></script>
+		<script src='hero/js/hero_stories_nav.js' type="text/javascript" charset="utf-8"></script>
 	<title>
 		you're my hero!
 	</title>
@@ -45,7 +46,7 @@
 						</figure>
 					</section>
 					<!--***********THE STORIES THEMSELVES-->
-					<article class="story" id="bulbasaur">
+					<article class="story opened" id="bulbasaur">
 						<section class="story-image">
 							<img src="media/stories/bulbasaur.png">
 						</section>
@@ -173,7 +174,7 @@
 							</div>
 						</section>
 					</article>
-					<article class="story opened" id="blastoise">
+					<article class="story" id="blastoise">
 						<section class="story-image">
 							<img src="media/stories/blastoise.jpg">
 						</section>
