Finished writing the first draft of the Stories nav script. Not quite as modular as maybe it should be, but it works. Also should maybe make more abstract? Changed the SCSS a bit to make the story images work better.

--- a/hero.html
+++ b/hero.html
@@ -116,7 +116,7 @@
 						</section>
 						<section class="story-blurb">
 							<header class="story-blurb">
-								Charmeleon '0
+								Charmeleon '05
 							</header>
 							<div class="blurb">
 								 <p>Charmeleon is a tailed bipedal, reptilian creature similar to Charmander. It has crimson scales that are much darker than that of the bright orange Charmander. It has a tail with the tip burning with fire, a trait seen in many Fire-type Pokémon, especially the Charmander evolutionary line.</p>
@@ -158,7 +158,7 @@
 							</div>
 						</section>
 					</article>
-					<article class="story" id="wartotle">
+					<article class="story" id="wartortle">
 						<section class="story-image">
 							<img src="media/stories/wartortle.jpg">
 						</section>
