Working on styling for the Photos section.

--- a/hero.html
+++ b/hero.html
@@ -225,20 +225,17 @@
 			<section class="feature" id="photos">
 				<section class="feature-content">
 					<article class="feature-article">
-						<header class="article-title">
-							photos
-						</header>
 						<section class="article-content">
-							<p>This story begins with Garrett being approached by a beautiful young woman by the name of Jill Craight. She hires Garrett to help find out who has been breaking into her apartment and why. Immediately after, a Magister Peridont comes to Garrett to try to get him to investigate the disappearance of some religious relics; Garrett respectfully declines. After getting attacked by a gang called the Vampires, Garrett goes to his old friend Maya, leader of a gang herself, for advice. Maya informs Garrett that Jill was a former member of the Doom, Maya's gang, and that she is a chronic liar. Sensing Garrett needs help, Maya invites herself along for the rest of the adventure.</p>
-							<p>Garrett and Maya continue their investigation, but unfortunately, Garrett has no leads and isn't even quite sure what to investigate. Garrett's one clue is some mysterious coinage tying together Jill and the Vampires. Garrett asks Magister Peridont about the coins, then heads over to the Royal Assay office for help. After learning nothing new, Garrett heads home, where he is visited again by Magister Peridont, who informs him that Miss Craight was in fact his mistress, and now she is missing.
-					</p>
-							<p>The story gets more complicated when Garrett visits Chodo Contague, whose house gets attacked by magical forces. Chodo Contague involves his henchmen more earnestly in Garrett's case, and Garrett and Maya take their search for Jill to the Tenderloin, the red-light district of TunFaire. When they return home, they find the same magical forces that attacked Chodo's mansion trying to tear apart Garrett's home. After taking care of them, the Dead Man intervenes, letting Garrett know that there is another dead Loghyr involved in the magical attacks. Eventually, Garrett and the Dead Man manage to tie together the roles of the Church, the missing relics, the dead Loghyr, and Jill Craight.</p>
-							<p>After discovering that Jill is hiding out in a church complex, Garrett and Morley break in and kidnap Jill and another of her lovers, a high status member of the Orthodox church. Garrett assembles everyone of importance at his house, and he and the Dead Man uncover the motives of all the parties present. Eventually, the relics are recovered, the other dead Loghyr is disposed of, and Garrett lives to tackle another adventure.</p>
+							<figure class="opened" id="01">
+								<img src="media/photos/01.jpg">
+							</figure>
 						</section>
 					</article>
 				</section>
 			</section>
+			
 		</section>
+		
 		<!--***********MAIN NAV*********-->
 		<nav id="features">
 			<ul>
