Changed some SCSS/HTML in Photos to make it compatible with intraNav

--- a/hero.html
+++ b/hero.html
@@ -15,12 +15,15 @@
 			<!--****************PHOTOS************-->
 			<section class="feature" id="photos">
 				<section class="feature-content">
+					
 					<section class="content">
 						<article class="feature-article">
 							<section class="article-content">
-								<figure class="opened" id="01">
-									<img src="media/photos/01.jpg">
-								</figure>
+								<article class="photo opened" id="01">
+									<figure>
+										<img src="media/photos/01.jpg">
+									</figure>
+								</article>
 							</section>
 						</article>
 					</section>
