Abstracted the JS a bit; changed SCSS and HTML accordingly.

--- a/hero.html
+++ b/hero.html
@@ -17,7 +17,7 @@
 				<section class="feature-content">
 					
 					<!--*******NAVIGATION BETWEEN PHOTOS-->
-					<section class="thumbs">
+						<section class="navlinks">
 						<figure id="01" class="opened">
 							<img src="media/photos/01.jpg">
 						</figure>
@@ -74,7 +74,7 @@
 			<section class="feature" id="stories">
 				<section class="feature-content">
 					<!--***********NAVIGATION BETWEEN STORIES-->
-					<section class="thumbs">
+					<section class="navlinks">
 						<figure id="bulbasaur" class="opened">
 							<img src="media/stories/bulbasaur.png">
 						</figure>
