Working on the Photoset JS got the arrows showing and hiding correctly; about to convert photosets to Cycle and work on showing thumbnails when you click on the large image itself.

--- a/hero.html
+++ b/hero.html
@@ -4,7 +4,8 @@
 	<link rel="stylesheet" href='hero/stylesheets/style.css' media="screen" title="no title" charset="utf-8" />
 	<script src='hero/js/jquery.1.7.2.min.js' type="text/javascript" charset="utf-8"></script>
 	<script src='hero/js/nav_inter.js' type="text/javascript" charset="utf-8"></script>
-		<script src='hero/js/nav_intra.js' type="text/javascript" charset="utf-8"></script>
+	<script src='hero/js/nav_intra.js' type="text/javascript" charset="utf-8"></script>
+	<script src='hero/js/photoset.js' type="text/javascript" charset="utf-8"></script>
 	<title>
 		you're my hero!
 	</title>
