No longer caching the sass, and still working on the Cycle stuff.

--- a/hero.html
+++ b/hero.html
@@ -153,7 +153,11 @@
 								
 								<script type="text/javascript">
 								    $('.photoset#miscellaneous').cycle({
-										fx: 'fade'
+										//fx: 'scrollHorz',
+										fx: 'fade',
+										prev: '.photoset#miscellaneous .prev',
+										next: '.next',
+										timeout: 0
 									});
 
 								</script>
