About to go under the hood a bit more.

--- a/hero.html
+++ b/hero.html
@@ -153,10 +153,9 @@
 								
 								<script type="text/javascript">
 								    $('.photoset#miscellaneous').cycle({
-										//fx: 'scrollHorz',
 										fx: 'fade',
-										prev: '.photoset#miscellaneous .prev',
-										next: '.next',
+										prev: '.photoset#miscellaneous figure',
+										next: '#miscellaneous#next',
 										timeout: 0
 									});
 
