Going in the right direction.

--- a/hero.html
+++ b/hero.html
@@ -51,7 +51,7 @@
 					<section class="content">
 						<article class="feature-article">
 							<section class="article-content">
-								
+								<div class="activearea"></div>
 								<article class="photoset opened" id="miscellaneous">
 									<div class="photo" id="01">
 										<figure>
