more decreasing specificity

--- a/hero.html
+++ b/hero.html
@@ -245,7 +245,7 @@
 			<section class="feature" id="stories">
 				<section class="feature-content">
 					<!--***********NAVIGATION BETWEEN STORIES-->
-					<section class="navlinks">
+					<section class="thumbnail-links">
 						<ul>
 							<li id="bulbasaur" class="opened">
 								<figure>
