--- a/hero.html
+++ b/hero.html
@@ -306,7 +306,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Bulbasaur is a quadruped, reptilian creature that somewhat resembles a toad or a young dinosaur with a spotted blue-green hide. It has three white toes or claws growing out of its four legs, and its eyes are a bright red. The most notable feature of this Pokémon is the onion-like bulb on its back, which grows from a seed planted on its back by its mother at birth.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -322,7 +322,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Ivysaur, like its pre-evolved form, Bulbasaur, resembles a toad or a quadruped dinosaur, though the patches in its skin cause it to resemble a dinosaur more closely. After evolving from Bulbasaur, Ivysaur grows small fangs and has visible ear insides and pupils. Ivysaur's skin is also a little bit bluer than Bulbasaur's.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -338,7 +338,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Venusaur is considerably larger and heavier than both of its pre-evolutions are, and as such, it moves slower than the two when it is not in battle, though it retains its quadruped form. The bud on its back has since bloomed into a large red flower with six expansive, white-spotted petals, supported on a brown trunk somewhat like that of a palm tree.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -354,7 +354,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Charmander is an orange reptilian creature resembling a tailed bipedal salamander with some dinosaur qualities, particularly like those of theropods. Charmander has four small fangs visible on its upper and lower jaws, a cream underside and an expansive cream coloration on the sole of its foot.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -370,7 +370,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Charmeleon is a tailed bipedal, reptilian creature similar to Charmander. It has crimson scales that are much darker than that of the bright orange Charmander. It has a tail with the tip burning with fire, a trait seen in many Fire-type Pokémon, especially the Charmander evolutionary line.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -386,7 +386,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Unlike its pre-evolutions, it has wings that can allow it to fly. Charizard is a very dragon-like Pokémon. Like its previous forms, it is bipedal and has a long tail with a fire burning at the tip. It has extremely sharp claws, a long neck, and two horns protruding from the back of its head.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -402,7 +402,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Squirtle is a short, tailed bipedal Pokémon. However, it has also been shown to be able to walk on all fours. They resemble a light blue turtle with their most notable feature being the hard shell on their back. This shell forms and hardens on its back after birth. They could perhaps be distantly related to some other turtle-like Pokémon, such as Torkoal and Turtwig, but Squirtle seems to only be closely related to their evolutions.</p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -418,7 +418,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Wartortle are tailed bipedal, indigo-blue turtle-like Pokémon with brown shells and long, furry tails and ears. Wartortle has small fangs protruding out of its mouth, brown irises, and three sharp claws on its arms. To maintain balance while swimming at high speeds, Wartortle move their unusual furry ears and tails. </p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
@@ -434,7 +434,7 @@
 								</header>
 								<div class="blurb">
 									 <p>Blastoise is a large, tailed bipedal, blue tortoise-like Pokémon with a tough brown shell and two powerful water cannons, which are steel-like in appearance, that jut out of the top sides of its shell. The cannons can be withdrawn inside the shell, or rotated to point backwards; this enables Blastoise to commence jet assisted rams. </p>
-									<button class="story-read-more">
+									<button class="hero-button story-read-more">
 										Read more
 									</button>
 								</div>
