--- a/hero.html
+++ b/hero.html
@@ -51,6 +51,9 @@
 					<section class="content">
 						<article class="feature-article">
 							<section class="article-content">
+								<div class="thumbs" id="miscellaneous">
+									HEY EVERYONE HEY HEY EVERYONE
+								</div>
 								<article class="photoset opened" id="miscellaneous">
 									<div class="photo" id="01">
 										<figure>
