It's kind of functional now!

--- a/hero.html
+++ b/hero.html
@@ -52,7 +52,38 @@
 						<article class="feature-article">
 							<section class="article-content">
 								<div class="thumbs" id="miscellaneous">
-									HEY EVERYONE HEY HEY EVERYONE
+									<ul>
+										<li id="01">
+											<figure>
+												<img src="media/photos/miscellaneous/01.jpg">
+											</figure>
+										</li>
+										<li id="02">
+											<figure>
+												<img src="media/photos/miscellaneous/02.jpg">
+											</figure>
+										</li>
+										<li id="03">
+											<figure>
+												<img src="media/photos/miscellaneous/03.jpg">
+											</figure>
+										</li>
+										<li id="04">
+											<figure>
+												<img src="media/photos/miscellaneous/04.jpg">
+											</figure>
+										</li>
+										<li id="05">
+											<figure>
+												<img src="media/photos/miscellaneous/05.jpg">
+											</figure>
+										</li>
+										<li id="06">
+											<figure>
+												<img src="media/photos/miscellaneous/06.jpg">
+											</figure>
+										</li>
+									</ul>
 								</div>
 								<article class="photoset opened" id="miscellaneous">
 									<div class="photo" id="01">
