all flattened, that stories thing. darkened the background, too, because it'll be on a white page. still looks bad, though.

--- a/hero.html
+++ b/hero.html
@@ -301,7 +301,7 @@
 								<img src="media/stories/bulbasaur.png">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Bulbasaur '01
 								</header>
 								<div class="blurb">
@@ -317,7 +317,7 @@
 								<img src="media/stories/ivysaur.png">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Ivysaur '02
 								</header>
 								<div class="blurb">
@@ -333,7 +333,7 @@
 								<img src="media/stories/venusaur.jpg">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Venusaur '03
 								</header>
 								<div class="blurb">
@@ -349,7 +349,7 @@
 								<img src="media/stories/charmander.jpg">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Charmander '04
 								</header>
 								<div class="blurb">
@@ -365,7 +365,7 @@
 								<img src="media/stories/charmeleon.png">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Charmeleon '05
 								</header>
 								<div class="blurb">
@@ -381,7 +381,7 @@
 								<img src="media/stories/charizard.jpg">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Charizard '06
 								</header>
 								<div class="blurb">
@@ -397,7 +397,7 @@
 								<img src="media/stories/squirtle.jpg">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Squirtle '07
 								</header>
 								<div class="blurb">
@@ -413,7 +413,7 @@
 								<img src="media/stories/wartortle.jpg">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Wartortle '08
 								</header>
 								<div class="blurb">
@@ -429,7 +429,7 @@
 								<img src="media/stories/blastoise.jpg">
 							</section>
 							<section class="story-blurb">
-								<header class="story-blurb">
+								<header class="story-blurb-header">
 									Blastoise '09
 								</header>
 								<div class="blurb">
