Fixed some HTML in the Stories panel to be compatible with the 'intra' JS.

--- a/hero.html
+++ b/hero.html
@@ -267,7 +267,7 @@
 			<section class="feature" id="stories">
 				<section class="feature-content">
 					<!--***********NAVIGATION BETWEEN STORIES-->
-					<section class="thumbnail-links">
+					<section class="thumbnail-links navlinks"><!--N.B. This needs the navlinks class or the JS won't work!-->
 						<ul>
 							<li id="bulbasaur" class="opened">
 								<figure>
